added deleting functionality

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,6 @@
   src: url("../public/contractica-fonts/TBCContracticaCAPS-Regular.ttf")
     format("truetype");
 }
+* {
+  white-space: pre-wrap;
+}
